Полное обновление: добавлен ProgressManager, GitHub Pages версия, исправлены все страницы

--- a/github-pages/webapp/page_1/index.html
+++ b/github-pages/webapp/page_1/index.html
@@ -18,5 +18,14 @@
         <button class="lets-go" id="letsGoBtn">Lets go!</button>
     </div>
     <script src="main.js"></script>
+
+    <!-- Telegram WebApp Script -->
+    <script src="https://telegram.org/js/telegram-web-app.js"></script>
+    
+    <!-- Progress Manager -->
+    <script src="../progress.js"></script>
+    
+    <!-- Main Script -->
+    <script src="main.js"></script>
 </body>
 </html> 
