--- a/local_ngrok/webapp/page_2/index.html
+++ b/local_ngrok/webapp/page_2/index.html
@@ -19,6 +19,7 @@
         </div>
         <button class="lets-go" id="listenBtn">Слушаюсь</button>
     </div>
+    <script src="../progress.js"></script>
     <script src="main.js"></script>
 </body>
 </html>
