--- a/local_ngrok/webapp/page_7/index.html
+++ b/local_ngrok/webapp/page_7/index.html
@@ -36,6 +36,7 @@
         <button class="lets-go" onclick="goToNextPage()">Первый инвестор и первый проект</button>
     </div>
     
+    <script src="../progress.js"></script>
     <script src="main.js"></script>
 </body>
 </html> 
