--- a/local_ngrok/webapp/page_9/index.html
+++ b/local_ngrok/webapp/page_9/index.html
@@ -28,6 +28,7 @@
         <button class="lets-go" onclick="goToNextPage()">Остановился ли я на одном проекте?</button>
     </div>
     
+    <script src="../progress.js"></script>
     <script src="main.js"></script>
 </body>
 </html> 
