--- a/github-pages/webapp/page_2/index.html
+++ b/github-pages/webapp/page_2/index.html
@@ -20,5 +20,14 @@
         <button class="lets-go" id="listenBtn">Слушаюсь</button>
     </div>
     <script src="main.js"></script>
+
+    <!-- Telegram WebApp Script -->
+    <script src="https://telegram.org/js/telegram-web-app.js"></script>
+    
+    <!-- Progress Manager -->
+    <script src="../progress.js"></script>
+    
+    <!-- Main Script -->
+    <script src="main.js"></script>
 </body>
 </html>
