--- a/local_ngrok/webapp/page_1/index.html
+++ b/local_ngrok/webapp/page_1/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <title>Emelyanov WebApp - Страница 1</title>
     <link rel="stylesheet" href="style.css">
+    <!-- Telegram WebApp Script -->
+    <script src="https://telegram.org/js/telegram-web-app.js"></script>
 </head>
 <body>
     <div class="container">
@@ -17,6 +19,7 @@
         </div>
         <button class="lets-go" id="letsGoBtn">Lets go!</button>
     </div>
+    <script src="../progress.js"></script>
     <script src="main.js"></script>
 </body>
 </html> 
