--- a/local_ngrok/webapp/page_10/index.html
+++ b/local_ngrok/webapp/page_10/index.html
@@ -35,6 +35,7 @@
         <button class="lets-go" onclick="goToNextPage()">Вера в себя - успех</button>
     </div>
     
+    <script src="../progress.js"></script>
     <script src="main.js"></script>
 </body>
 </html> 
