--- a/local_ngrok/webapp/page_11/index.html
+++ b/local_ngrok/webapp/page_11/index.html
@@ -37,6 +37,7 @@
         <button class="lets-go" onclick="goToNextPage()">Затишье</button>
     </div>
     
+    <script src="../progress.js"></script>
     <script src="main.js"></script>
 </body>
 </html> 
