--- a/local_ngrok/webapp/page_12/index.html
+++ b/local_ngrok/webapp/page_12/index.html
@@ -23,6 +23,7 @@
         <button class="lets-go" onclick="goToNextPage()">ПЕРВЫЙ МИЛЛИОН В 17</button>
     </div>
     
+    <script src="../progress.js"></script>
     <script src="main.js"></script>
 </body>
 </html> 
