--- a/local_ngrok/webapp/page_13/index.html
+++ b/local_ngrok/webapp/page_13/index.html
@@ -27,6 +27,7 @@
         <button class="lets-go" onclick="goToNextPage()">Делаем космос цифры за осень.</button>
     </div>
     
+    <script src="../progress.js"></script>
     <script src="main.js"></script>
 </body>
 </html> 
