--- a/local_ngrok/webapp/page_4/index.html
+++ b/local_ngrok/webapp/page_4/index.html
@@ -32,6 +32,7 @@
         </div>
         <button class="lets-go" id="nextBtn">А с чего всё начало меняться?</button>
     </div>
+    <script src="../progress.js"></script>
     <script src="main.js"></script>
 </body>
 </html> 
