--- a/local_ngrok/webapp/page_8/index.html
+++ b/local_ngrok/webapp/page_8/index.html
@@ -42,6 +42,7 @@
         <button class="lets-go" onclick="showWow()">Ого!</button>
     </div>
     
+    <script src="../progress.js"></script>
     <script src="main.js"></script>
 </body>
 </html> 
