Исправлены проблемы с сохранением прогресса и username: обновлен progress.js для Railway, бот теперь передает user_id в URL, все страницы используют новый progress.js

--- a/webapp/page_1/index.html
+++ b/webapp/page_1/index.html
@@ -18,7 +18,7 @@
         </div>
         <button class="lets-go" id="letsGoBtn">Lets go!</button>
     </div>
-    <script src="../api.js"></script>
+    <script src="../progress.js"></script>
     <script src="main.js"></script>
 </body>
 </html> 
