Исправлены конфликты onclick/addEventListener - убраны onclick из HTML, оставлены только addEventListener

--- a/webapp/page_10/index.html
+++ b/webapp/page_10/index.html
@@ -32,7 +32,7 @@
             </div>
         </div>
         
-        <button class="lets-go" onclick="goToNextPage()">Вера в себя - успех</button>
+        <button class="lets-go" >Вера в себя - успех</button>
     </div>
     
     <script src="main.js"></script>
