--- a/webapp/page_12/index.html
+++ b/webapp/page_12/index.html
@@ -20,7 +20,7 @@
             </div>
         </div>
         
-        <button class="lets-go" onclick="goToNextPage()">ПЕРВЫЙ МИЛЛИОН В 17</button>
+        <button class="lets-go" >ПЕРВЫЙ МИЛЛИОН В 17</button>
     </div>
     
     <script src="main.js"></script>
