--- a/webapp/page_14/index.html
+++ b/webapp/page_14/index.html
@@ -33,7 +33,7 @@
             </div>
         </div>
         
-        <button class="lets-go" onclick="goToNextPage()">Денег становиться очень много</button>
+        <button class="lets-go">Денег становиться очень много</button>
     </div>
     
     <script src="main.js"></script>
