--- a/webapp/page_6/index.html
+++ b/webapp/page_6/index.html
@@ -23,7 +23,7 @@
             </div>
         </div>
         
-        <button class="lets-go" onclick="goToNextPage()">И что? Тебя не обманули?</button>
+        <button class="lets-go">И что? Тебя не обманули?</button>
     </div>
     
     <script src="main.js"></script>
