--- a/webapp/page_8/index.html
+++ b/webapp/page_8/index.html
@@ -39,7 +39,7 @@
             </div>
         </div>
         
-        <button class="lets-go" onclick="showWow()">Ого!</button>
+        <button class="lets-go">Ого!</button>
     </div>
     
     <script src="main.js"></script>
