--- a/webapp/page_9/index.html
+++ b/webapp/page_9/index.html
@@ -25,7 +25,7 @@
             </div>
         </div>
         
-        <button class="lets-go" onclick="goToNextPage()">Остановился ли я на одном проекте?</button>
+        <button class="lets-go" >Остановился ли я на одном проекте?</button>
     </div>
     
     <script src="main.js"></script>
