--- a/webapp/page_11/index.html
+++ b/webapp/page_11/index.html
@@ -34,7 +34,7 @@
             </div>
         </div>
         
-        <button class="lets-go" onclick="goToNextPage()">Затишье</button>
+        <button class="lets-go" >Затишье</button>
     </div>
     
     <script src="main.js"></script>
