--- a/webapp/page_13/index.html
+++ b/webapp/page_13/index.html
@@ -24,7 +24,7 @@
             </div>
         </div>
         
-        <button class="lets-go" onclick="goToNextPage()">Делаем космос цифры за осень.</button>
+        <button class="lets-go" >Делаем космос цифры за осень.</button>
     </div>
     
     <script src="main.js"></script>
