--- a/webapp/page_5/index.html
+++ b/webapp/page_5/index.html
@@ -25,7 +25,7 @@
             </div>
         </div>
         
-        <button class="lets-go" onclick="goToNextPage()">А дальше что?</button>
+        <button class="lets-go">А дальше что?</button>
     </div>
     
     <script src="main.js"></script>
