--- a/webapp/page_7/index.html
+++ b/webapp/page_7/index.html
@@ -33,7 +33,7 @@
             </div>
         </div>
         
-        <button class="lets-go" onclick="goToNextPage()">Первый инвестор и первый проект</button>
+        <button class="lets-go" >Первый инвестор и первый проект</button>
     </div>
     
     <script src="main.js"></script>
