Добавлен progress.js на все страницы 5-14 для корректной работы user_id

--- a/webapp/page_10/index.html
+++ b/webapp/page_10/index.html
@@ -35,6 +35,7 @@
         <button class="lets-go" >Вера в себя - успех</button>
     </div>
     
+    <script src="../progress.js"></script>
     <script src="main.js"></script>
 </body>
 </html> 
