--- a/webapp/page_13/index.html
+++ b/webapp/page_13/index.html
@@ -27,6 +27,7 @@
         <button class="lets-go" >Делаем космос цифры за осень.</button>
     </div>
     
+    <script src="../progress.js"></script>
     <script src="main.js"></script>
 </body>
 </html> 
