--- a/webapp/page_14/index.html
+++ b/webapp/page_14/index.html
@@ -36,6 +36,7 @@
         <button class="lets-go">Денег становиться очень много</button>
     </div>
     
+    <script src="../progress.js"></script>
     <script src="main.js"></script>
 </body>
 </html> 
