--- a/webapp/page_6/index.html
+++ b/webapp/page_6/index.html
@@ -26,6 +26,7 @@
         <button class="lets-go">И что? Тебя не обманули?</button>
     </div>
     
+    <script src="../progress.js"></script>
     <script src="main.js"></script>
 </body>
 </html> 
