--- a/webapp/page_11/index.html
+++ b/webapp/page_11/index.html
@@ -37,6 +37,7 @@
         <button class="lets-go" >Затишье</button>
     </div>
     
+    <script src="../progress.js"></script>
     <script src="main.js"></script>
 </body>
 </html> 
