--- a/webapp/page_5/index.html
+++ b/webapp/page_5/index.html
@@ -28,6 +28,7 @@
         <button class="lets-go">А дальше что?</button>
     </div>
     
+    <script src="../progress.js"></script>
     <script src="main.js"></script>
 </body>
 </html> 
