Обновлен дизайн страниц 4, 6-9, 11-14, 23
- Страница 4: имя и дата рождения по центру
- Страница 6: 'Тут мне уже 16' по центру красным
- Страница 7: вопросы по центру
- Страница 8: убраны кавычки в заголовке
- Страница 9: убраны кавычки в заголовке, текст по центру
- Страницы 11-14: убраны кавычки в заголовках
- Страница 13: ключевые фразы по центру красным
- Страница 23: 'обнимаю всех' по центру
- Добавлены CSS стили для центрирования

--- a/webapp/page_11/index.html
+++ b/webapp/page_11/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <div class="title">«Меня было не остановить, я привлекал клиента за клиентом, проект за проектом и успешно реализовывал их.»</div>
+        <div class="title">Меня было не остановить, я привлекал клиента за клиентом, проект за проектом и успешно реализовывал их.</div>
         
         <img src="../11_page_photo.jpeg" alt="Фото" class="main-photo" loading="eager" decoding="sync" crossorigin="anonymous">
         
