--- a/webapp/page_23/index.html
+++ b/webapp/page_23/index.html
@@ -20,7 +20,7 @@
             Когда вы на пике - будьте внимательны, если вы с него упадете, будет больнее всего. ( и тяжелее всего вставать и подниматься на вершину) но если упали то, показывайте свой характер мужчины и вставайте блять сквозь все терни)<br><br>
             Не берите много проектов и следите за ними в оба.<br><br>
             теперь вы знаете меня чуть чуть больше, всем спасибо, это нереально крутая история из моей жизни, про которую честно я бы даже снял фильм.<br><br>
-            обнимаю всех</p>
+            <span class="centered">обнимаю всех</span></p>
         </div>
         
         <button class="next-button" id="nextButton">Брат, а мне что делать?</button>
