--- a/webapp/page_6/index.html
+++ b/webapp/page_6/index.html
@@ -14,7 +14,7 @@
         
         <div class="bio-text">
             <div class="bio-content">
-                <p>тут мне уже 16.</p>
+                <p class="centered red-text">Тут мне уже 16</p>
                 <p>Все такое же крутое мышление, есть цели, есть какие то мимолетные деньги, которые приходят, но нету той самой постоянной ниши, которая бы была любимой для меня, в которой бы я работал и получал реальное удовольствие.</p>
                 <p>А для меня реально любимое дело - это когда ты не от кого не зависишь, когда ты работаешь онлайн из любой точки мира, коммуницируешь со своей командой и строишь за собой историю.</p>
                 <p>Мышление было. Но никак не мог найти то, чего я хотел.</p>
