--- a/webapp/page_8/index.html
+++ b/webapp/page_8/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <div class="title">«Я бы мог сразу сдаться, потому что мне отказали, но игра слов и ум сделали своё дело»</div>
+        <div class="title">Я бы мог сразу сдаться, потому что мне отказали, но игра слов и ум сделали своё дело</div>
         
         <img src="../8_page_photo.jpeg" alt="Фото" class="main-photo" loading="eager" decoding="sync" crossorigin="anonymous">
         
