--- a/webapp/page_12/index.html
+++ b/webapp/page_12/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <div class="title">«Бесплатный отдых, спасибо телеграму.»</div>
+        <div class="title">Бесплатный отдых, спасибо телеграму.</div>
         
         <img src="../12_page_photo.jpeg" alt="Фото" class="main-photo" loading="eager" decoding="sync" crossorigin="anonymous">
         
