--- a/webapp/page_13/index.html
+++ b/webapp/page_13/index.html
@@ -8,15 +8,15 @@
 </head>
 <body>
     <div class="container">
-        <div class="title">«Да, такие деньги крутятся в тг, многие до сих пор не верят, что есть такой белый бизнес с такими деньгами.»</div>
+        <div class="title">Да, такие деньги крутятся в тг, многие до сих пор не верят, что есть такой белый бизнес с такими деньгами.</div>
         
         <img src="../13_page_photo.jpeg" alt="Фото" class="main-photo" loading="eager" decoding="sync" crossorigin="anonymous">
         
         <div class="bio-text">
             <div class="bio-content">
-                <p>Сентябрь</p>
-                <p>я делаю первый миллион.</p>
-                <p>сука мне 17)</p>
+                <p class="centered red-text">Сентябрь</p>
+                <p class="centered red-text">Я делаю первый миллион.</p>
+                <p class="centered red-text">сука мне 17)</p>
                 <p>мечта была сделать его в 18, Вы представьте, я этого хотел с 14 лет, ахуеть...</p>
                 <p>я иду с кентом снимать нал и держу 1 лям + налом.</p>
                 <p>после этого я иду домой и показываю это маме, она не слышал о моей работе ничего, я работал бесконечно и молчал, я показываю ей и...</p>
