--- a/webapp/page_14/index.html
+++ b/webapp/page_14/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <div class="title">«Снова, лучшие специалисты на рынке.»</div>
+        <div class="title">Снова, лучшие специалисты на рынке.</div>
         
         <img src="../14_page_photo.jpeg" alt="Фото" class="main-photo" loading="eager" decoding="sync" crossorigin="anonymous">
         
