--- a/webapp/page_4/index.html
+++ b/webapp/page_4/index.html
@@ -14,8 +14,8 @@
         </div>
         <img src="../4_page_photo.jpeg" alt="photo" class="main-photo" loading="eager" decoding="sync" crossorigin="anonymous" onload="console.log('Image loaded successfully:', this.src);" onerror="console.log('Image failed to load:', this.src);">
         <div class="bio-text">
-            <div class="name">Емельянов Илья Александрович.</div>
-            <div class="birth-date">27.02.2007</div>
+            <div class="name centered">Емельянов Илья Александрович</div>
+            <div class="birth-date centered">27.02.2007</div>
             <div class="bio-content">
                 Родился в городе Дзержинск. Нижегородская область. Все детство я рос в обычной средней семье.
                 <br><br>
