--- a/webapp/page_7/index.html
+++ b/webapp/page_7/index.html
@@ -12,7 +12,7 @@
         
         <div class="bio-text">
             <div class="bio-content">
-                <p>Что я для этого сделал?</p>
+                <p class="centered">Что я для этого сделал?</p>
                 <p>Рискнул. А точнее, я решил дать свои последние деньги человеку, чтобы он мне сделал канал под ключ.</p>
                 <p>В моих мыслях уже был успех, радость.</p>
                 <p>Новая ниша.</p>
@@ -24,7 +24,7 @@
         <div class="bio-text">
             <div class="bio-content">
                 <p>Было обидно, но я не сдался и у меня было дикое стремление разьебать рынок телеги из за этого случая, я хотел, чтобы мое имя знал каждый админ и у меня была очень крупная сетка каналов.</p>
-                <p>Что я делаю дальше?</p>
+                <p class="centered">Что я делаю дальше?</p>
                 <p>Я начал работать в Услугах, мечтать о канале и думать, что мне делать дальше.</p>
                 <p>честно говоря, я пишу эту историю и вспоминаю свои эмоции на тот момент.</p>
                 <p>Был страх, но я будто чувствовал и знал, что все получиться именно в сфере телеги.</p>
