--- a/webapp/page_9/index.html
+++ b/webapp/page_9/index.html
@@ -8,15 +8,15 @@
 </head>
 <body>
     <div class="container">
-        <div class="title">«Первые деньги в онлайне, первый успешный проект и бесконечная радость за себя и партнера.»</div>
+        <div class="title">Первые деньги в онлайне, первый успешный проект и бесконечная радость за себя и партнера.</div>
         
         <img src="../9_page_photo.jpeg" alt="Фото" class="main-photo" loading="eager" decoding="sync" crossorigin="anonymous">
         
         <div class="bio-text">
             <div class="bio-content">
-                <p>Работа.</p>
+                <p class="centered">Работа.</p>
                 <p>Я и мой партнер рискуем, грубо говоря, всем. и начинаем делать проект. Все проходит достаточно хорошо. Выбрали дизайн, начали выбирать название канала.</p>
-                <p>Остановились на "харизмо"</p>
+                <p class="centered">Остановились на харизмо.</p>
                 <p>После этого, мы заказали рекламный креатив, протестили его и начали Сам залив.</p>
                 <p>Залили канал на хорошие цифры, и он начал нести хороший доход.</p>
                 <p>Когда я увидел цифры, которые приходили мне с рекламы - 2-3 к в день, работая в онлайне, я понял, что я мечтал об этом всю свою жизнь.</p>
