Добавлены ограничения для мобильных устройств: запрет поворота экрана и зума во всех страницах webapp

--- a/webapp/page_9/index.html
+++ b/webapp/page_9/index.html
@@ -2,7 +2,11 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
+    <meta name="screen-orientation" content="portrait">
+    <meta name="x5-orientation" content="portrait">
+    <meta name="full-screen" content="yes">
+    <meta name="x5-fullscreen" content="true">
     <title>Emelyanov WebApp - Страница 9</title>
     <link rel="stylesheet" href="style.css">
 </head>
