Добавлена статичная челка с динамической высотой: предотвращает случайные свайпы, адаптируется под устройства

--- a/webapp/page_19/index.html
+++ b/webapp/page_19/index.html
@@ -13,6 +13,10 @@
     <script src="../progress.js"></script>
 </head>
 <body>
+    <!-- Статичная челка сверху -->
+    <div class="static-header"></div>
+    
+
     <div class="container">
         <h1 class="title">Мне предлагают проект на 20 к баксов<br>
         17 лет, состояние больше 50 тысяч долларов, ахуеть?<br>
