--- a/webapp/page_24/index.html
+++ b/webapp/page_24/index.html
@@ -13,6 +13,10 @@
     <script src="../progress.js"></script>
 </head>
 <body>
+    <!-- Статичная челка сверху -->
+    <div class="static-header"></div>
+    
+
     <div class="container">
         <h1 class="title">Если ты дошел до конца, значит тебе это импонирует. Значит ты уже не NPS в этой жизни и чего-то да стоишь.</h1>
         
