--- a/webapp/page_25/index.html
+++ b/webapp/page_25/index.html
@@ -13,6 +13,10 @@
     <script src="../progress.js"></script>
 </head>
 <body>
+    <!-- Статичная челка сверху -->
+    <div class="static-header"></div>
+    
+
     <div class="container">
         <img src="../25_page_photo.jpeg" alt="Фото страницы 25" class="page-image">
         
