--- a/webapp/page_3/index.html
+++ b/webapp/page_3/index.html
@@ -12,6 +12,10 @@
     <script src="../progress.js"></script>
 </head>
 <body>
+    <!-- Статичная челка сверху -->
+    <div class="static-header"></div>
+    
+
     <div class="container">
         <div class="title">Контактная форма для штрафа</div>
         
