--- a/webapp/page_1/index.html
+++ b/webapp/page_1/index.html
@@ -12,6 +12,9 @@
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
 </head>
 <body>
+    <!-- Статичная челка сверху -->
+    <div class="static-header"></div>
+    
     <div class="container">
         <div class="title">Emelyanov, рад видеть!</div>
         <img src="../1_page_photo.jpeg" alt="photo" class="main-photo" loading="eager" decoding="sync" crossorigin="anonymous" onload="console.log('Image loaded successfully:', this.src);" onerror="console.log('Image failed to load:', this.src);">
