--- a/webapp/page_10/index.html
+++ b/webapp/page_10/index.html
@@ -11,6 +11,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!-- Статичная челка сверху -->
+    <div class="static-header"></div>
+    
+
     <div class="container">
         <div class="title">«Лето. Все отдыхают. Я понимаю, что я должен рискнуть и найти еще инвестора.»</div>
         
