--- a/webapp/page_11/index.html
+++ b/webapp/page_11/index.html
@@ -11,6 +11,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!-- Статичная челка сверху -->
+    <div class="static-header"></div>
+    
+
     <div class="container">
         <div class="title">Меня было не остановить, я привлекал клиента за клиентом, проект за проектом и успешно реализовывал их.</div>
         
