--- a/webapp/page_12/index.html
+++ b/webapp/page_12/index.html
@@ -11,6 +11,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!-- Статичная челка сверху -->
+    <div class="static-header"></div>
+    
+
     <div class="container">
         <div class="title">Бесплатный отдых, спасибо телеграму.</div>
         
