--- a/webapp/page_13/index.html
+++ b/webapp/page_13/index.html
@@ -11,6 +11,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!-- Статичная челка сверху -->
+    <div class="static-header"></div>
+    
+
     <div class="container">
         <div class="title">Да, такие деньги крутятся в тг, многие до сих пор не верят, что есть такой белый бизнес с такими деньгами.</div>
         
