--- a/webapp/page_17/index.html
+++ b/webapp/page_17/index.html
@@ -13,6 +13,10 @@
     <script src="../progress.js"></script>
 </head>
 <body>
+    <!-- Статичная челка сверху -->
+    <div class="static-header"></div>
+    
+
     <div class="container">
         <h1 class="title">Знакомство с Гришей, медиа сфера, личный бренд, сделка почти на миллион рублей на третий день знакомства</h1>
         
