--- a/webapp/page_2/index.html
+++ b/webapp/page_2/index.html
@@ -11,6 +11,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!-- Статичная челка сверху -->
+    <div class="static-header"></div>
+    
+
     <div class="container">
         <div class="title">Попались!</div>
         <img src="../2_page_photo.jpeg" alt="photo" class="main-photo" loading="eager" decoding="sync" crossorigin="anonymous" onload="console.log('Image loaded successfully:', this.src);" onerror="console.log('Image failed to load:', this.src);">
