--- a/webapp/page_22/index.html
+++ b/webapp/page_22/index.html
@@ -13,6 +13,10 @@
     <script src="../progress.js"></script>
 </head>
 <body>
+    <!-- Статичная челка сверху -->
+    <div class="static-header"></div>
+    
+
     <div class="container">
         <h1 class="title">сложно пиздец, я живу просто в страхе и не понимаю что происходит.</h1>
         
