--- a/webapp/page_23/index.html
+++ b/webapp/page_23/index.html
@@ -13,6 +13,10 @@
     <script src="../progress.js"></script>
 </head>
 <body>
+    <!-- Статичная челка сверху -->
+    <div class="static-header"></div>
+    
+
     <div class="container">
         <h1 class="title">благодарен своему характеру, который никогда не сдается, я живу по этому принципу и вам советую. из любой ситуации есть выход.</h1>
         
