--- a/webapp/page_6/index.html
+++ b/webapp/page_6/index.html
@@ -11,6 +11,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!-- Статичная челка сверху -->
+    <div class="static-header"></div>
+    
+
     <div class="container">
         <div class="title">Деньги вроде бы какие-то есть. Но понимаю, что меня это не драйвит. Нужно что-то большее.. Телеграм!</div>
         
