--- a/webapp/page_8/index.html
+++ b/webapp/page_8/index.html
@@ -11,6 +11,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!-- Статичная челка сверху -->
+    <div class="static-header"></div>
+    
+
     <div class="container">
         <div class="title">Я бы мог сразу сдаться, потому что мне отказали, но игра слов и ум сделали своё дело</div>
         
