--- a/webapp/page_9/index.html
+++ b/webapp/page_9/index.html
@@ -11,6 +11,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!-- Статичная челка сверху -->
+    <div class="static-header"></div>
+    
+
     <div class="container">
         <div class="title">Первые деньги в онлайне, первый успешный проект и бесконечная радость за себя и партнера.</div>
         
