Добавлен scroll-buffer для полной защиты от закрытия - Невидимая прокручиваемая область выше экрана - Сохранена статичная челка - Обновлена JavaScript логика для работы с buffer - Обновлено 75 файлов (25 HTML + 25 CSS + 25 JS)

--- a/webapp/page_10/index.html
+++ b/webapp/page_10/index.html
@@ -11,6 +11,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!-- Невидимая прокручиваемая область для предотвращения закрытия -->
+    <div class="scroll-buffer"></div>
+    
     <!-- Статичная челка сверху -->
     <div class="static-header"></div>
     
