--- a/webapp/page_1/index.html
+++ b/webapp/page_1/index.html
@@ -12,6 +12,9 @@
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
 </head>
 <body>
+    <!-- Невидимая прокручиваемая область для предотвращения закрытия -->
+    <div class="scroll-buffer"></div>
+    
     <!-- Статичная челка сверху -->
     <div class="static-header"></div>
     
