--- a/webapp/page_11/index.html
+++ b/webapp/page_11/index.html
@@ -11,6 +11,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!-- Невидимая прокручиваемая область для предотвращения закрытия -->
+    <div class="scroll-buffer"></div>
+    
     <!-- Статичная челка сверху -->
     <div class="static-header"></div>
     
