--- a/webapp/page_20/index.html
+++ b/webapp/page_20/index.html
@@ -13,6 +13,9 @@
     <script src="../progress.js"></script>
 </head>
 <body>
+    <!-- Невидимая прокручиваемая область для предотвращения закрытия -->
+    <div class="scroll-buffer"></div>
+    
     <!-- Статичная челка сверху -->
     <div class="static-header"></div>
     
