--- a/webapp/page_1/index.html
+++ b/webapp/page_1/index.html
@@ -1,34 +1,47 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
-    <meta name="screen-orientation" content="portrait">
-    <meta name="x5-orientation" content="portrait">
-    <meta name="full-screen" content="yes">
-    <meta name="x5-fullscreen" content="true">
-    <title>Emelyanov WebApp - Страница 1</title>
-    <link rel="stylesheet" href="style.css">
-    <script src="https://telegram.org/js/telegram-web-app.js"></script>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
+  <meta name="screen-orientation" content="portrait" />
+  <meta name="x5-orientation" content="portrait" />
+  <meta name="full-screen" content="yes" />
+  <meta name="x5-fullscreen" content="true" />
+  <title>Emelyanov WebApp - Страница 1</title>
+  <link rel="stylesheet" href="style.css" />
+  <script src="https://telegram.org/js/telegram-web-app.js"></script>
 </head>
 <body>
-    <!-- Невидимая прокручиваемая область для предотвращения закрытия -->
-    <div class="scroll-buffer"></div>
-    
-    <!-- Статичная челка сверху -->
-    <div class="static-header"></div>
-    
-    <div class="container">
-        <div class="title">Emelyanov, рад видеть!</div>
-        <img src="../1_page_photo.jpeg" alt="photo" class="main-photo" loading="eager" decoding="sync" crossorigin="anonymous" onload="console.log('Image loaded successfully:', this.src);" onerror="console.log('Image failed to load:', this.src);">
-        <div class="description">
-            Если ты дошёл до сюда, значит ты на пути развития и близок к открытию денежного потока.<br><br>
-            Сейчас заеду за тобой на своей BMW и мы поедем на Нижегородское кольцо наблюдать за моими взлетами и падениями..<br><br>
-            <b>Are you ready?</b>
-        </div>
-        <button class="lets-go" id="letsGoBtn">Lets go!</button>
+  <!-- Невидимая прокручиваемая область для предотвращения закрытия -->
+  <div class="scroll-buffer"></div>
+
+  <!-- Статичная челка сверху -->
+  <div class="static-header"></div>
+
+  <div class="container">
+    <div class="title">Emelyanov, рад видеть!</div>
+
+    <img
+      src="../1_page_photo.jpeg"
+      alt="photo"
+      class="main-photo"
+      loading="eager"
+      decoding="sync"
+      crossorigin="anonymous"
+      onload="console.log('Image loaded successfully:', this.src);"
+      onerror="console.log('Image failed to load:', this.src);"
+    />
+
+    <div class="description">
+      Если ты дошёл до сюда, значит ты на пути развития и близок к открытию денежного потока.<br /><br />
+      Сейчас заеду за тобой на своей BMW и мы поедем на Нижегородское кольцо наблюдать за моими взлетами и падениями..<br /><br />
+      <b>Are you ready?</b>
     </div>
-    <script src="../progress.js"></script>
-    <script src="main.js"></script>
+
+    <button class="lets-go" id="letsGoBtn">Lets go!</button>
+  </div>
+
+  <script src="../progress.js"></script>
+  <script src="main.js"></script>
 </body>
-</html> 
+</html>
