Исправлены баги: форма на 3-ей странице с попапом сохранения и логика восстановления прогресса

--- a/webapp/page_3/index.html
+++ b/webapp/page_3/index.html
@@ -60,6 +60,15 @@
         
         <button class="lets-go" id="submitBtn">Я заполнил! Что дальше?</button>
     </div>
+
+    <!-- Попап для статуса сохранения -->
+    <div class="save-popup" id="savePopup">
+        <div class="save-popup-content">
+            <div class="save-spinner"></div>
+            <div class="save-text">Данные отправлены. Сохраняются...</div>
+        </div>
+    </div>
+
     <script src="main.js"></script>
 </body>
 </html>
