Fix: улучшена инициализация Telegram WebApp для правильного открытия как мини-приложения

--- a/webapp/page_4/index.html
+++ b/webapp/page_4/index.html
@@ -9,6 +9,7 @@
     <meta name="x5-fullscreen" content="true">
     <title>Emelyanov WebApp - Страница 4</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://telegram.org/js/telegram-web-app.js"></script>
 </head>
 <body>
     <!-- Невидимая прокручиваемая область для предотвращения закрытия -->
@@ -22,6 +23,7 @@
         <div class="title">Конец ознакомительной части</div>
         <button class="lets-go" id="exitBtn">Выход</button>
     </div>
+    <script src="../progress.js?v=test-2"></script>
     <script src="main.js"></script>
 </body>
 </html> 
