--- a/webapp/page_1/index.html
+++ b/webapp/page_1/index.html
@@ -41,7 +41,7 @@
     <button class="lets-go" id="letsGoBtn">Lets go!</button>
   </div>
 
-  <script src="../progress.js"></script>
+  <script src="../progress.js?v=test-2"></script>
   <script src="main.js"></script>
 </body>
 </html>
