--- a/webapp/page_2/index.html
+++ b/webapp/page_2/index.html
@@ -9,6 +9,7 @@
     <meta name="x5-fullscreen" content="true">
     <title>Emelyanov WebApp - Страница 2</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://telegram.org/js/telegram-web-app.js"></script>
 </head>
 <body>
     <!-- Невидимая прокручиваемая область для предотвращения закрытия -->
@@ -30,6 +31,7 @@
         </div>
         <button class="lets-go" id="listenBtn">Слушаюсь</button>
     </div>
+    <script src="../progress.js?v=test-2"></script>
     <script src="main.js"></script>
 </body>
 </html>
