--- a/webapp/page_3/index.html
+++ b/webapp/page_3/index.html
@@ -9,7 +9,8 @@
     <meta name="x5-fullscreen" content="true">
     <title>Emelyanov WebApp - Контактная форма</title>
     <link rel="stylesheet" href="style.css">
-    <script src="../progress.js"></script>
+    <script src="https://telegram.org/js/telegram-web-app.js"></script>
+    <script src="../progress.js?v=test-2"></script>
 </head>
 <body>
     <!-- Невидимая прокручиваемая область для предотвращения закрытия -->
