Add: отправка данных в бот при закрытии приложения + кнопка рестарта

--- a/webapp/page_1/index.html
+++ b/webapp/page_1/index.html
@@ -19,7 +19,7 @@
   <div class="static-header"></div>
 
   <div class="container">
-    <div class="title">Emelyanov, рад видеть!</div>
+    <div class="title">E_____v, рад видеть!</div>
 
     <img
       src="../1_page_photo.jpeg"
