Добавлены параметры версии для main.js для обновления кеша

--- a/webapp/page_4/index.html
+++ b/webapp/page_4/index.html
@@ -24,6 +24,6 @@
         <button class="lets-go" id="exitBtn">Выход</button>
     </div>
     <script src="../progress.js?v=test-2"></script>
-    <script src="main.js"></script>
+    <script src="main.js?v=test-3"></script>
 </body>
 </html> 
